--- a/src/Components/Clearance/Clearance.css
+++ b/src/Components/Clearance/Clearance.css
@@ -3,40 +3,60 @@
     padding: 0px;
 }
 
-.buttonContainer{
+#clearance_container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+#text_input_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* width: '100%'; */
+    width: 70%;
+    padding: 20px;
+    
+}
+
+
+
+
+
+#yearly_tax_content{
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    width: 70%;
+    justify-content: center;
+    padding: 20px;
+}
+
+#text_spacing{
+    padding-bottom: 20px;
+}
+
+#buttonContainer{
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 70%;
     justify-content: space-evenly;
-    padding: 30px;
-    width: 50%;
 }
 
-.Container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 30px;
-    width: 50%;
-}
-
-button{
+#button1{
+    background-color: green;
     width: 100px;
     height: 50px;
     color: white;
 }
 
-.button1{
-    background-color: green;
-}
-
-.button2{
+#button2{
     background-color: red;
+    width: 100px;
+    height: 50px;
+    color: white;
 }
 
-.yearly_tax_content{
-    padding-top: 30px;
-    width: 40%;
-    margin-left: 140px;
-}
+
