--- a/src/Components/Tax/Tax.css
+++ b/src/Components/Tax/Tax.css
@@ -1,42 +1,48 @@
 *{
     margin: 0px;
     padding: 0px;
+    
 }
 
-.buttonContainer{
+#tax_container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: flex-start; */
+    align-items: flex-start;
+}
+
+#text_input_container{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 30px;
-    width: 50%;
+    justify-content: space-between;
+    padding: 20px;
 }
 
-.Container{
+#buttonContainer{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 30px;
-    width: 50%;
+    justify-content: space-between;
+    padding: 20px;
+    width: 70%;
 }
 
-button{
+#button1{
     width: 100px;
     height: 50px;
     color: white;
-}
-
-.button1{
     background-color: green;
 }
 
-.button2{
+#button2{
+    width: 100px;
+    height: 50px;
+    color: white;
     background-color: red;
 }
 
 .yearly_tax_content{
-    padding-top: 30px;
-    width: 40%;
-    margin-left: 140px;
+    padding: 20px;
 }
