--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .p-panelmenu {
-  height: 100vw;
   background-color: #3925a8;
+  height: 35vw;
+  background-color: #3925a8;
+  position: fixed;
+  top: 25%;
+
 }
 
 .p-panelmenu-panel {
@@ -19,4 +23,16 @@
 
 .pi-fw {
   margin-right: 10px
+}
+
+.p-component-overlay {
+  position: fixed;
+  top: 20% !important;
+  left: 0;
+  /* width: 10% !important; */
+  height: 79%;
+}
+
+.p-sidebar-left {
+  top: 20% !important
 }
